--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,15 @@
 permalink:           pretty
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
-paginate:            1
-baseurl:             ""
+title:              Igor's Blog
+tagline:             ''
+description:         ''
+home:                https://igorshiohara.github.io/
+url:                 https://igorshiohara.github.io/blog
+baseurl:             /blog
+paginate:            5
+paginate_path:       "/page:num/"
+exclude:             ['posts']
 
 # Assets
 #
@@ -17,16 +21,15 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Igor Shiohara
+  email:             ishiohara@gmail.com
 
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/poole/poole
+  repo:              https://github.com/igorshiohara/blog
 
 # Gems
-gems:
+plugins:
   - jekyll-paginate
   - jekyll-gist
